# harborbeacon-desktop

./: .gitignore  Cargo.toml  README.md  REPO_BOOTSTRAP.md
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
apps/doctor/: Cargo.toml
apps/doctor/src/: main.rs
apps/mcp-server/: Cargo.toml
apps/mcp-server/src/: main.rs
crates/core-contracts/: Cargo.toml
crates/core-contracts/src/: lib.rs
crates/feishu-provider/: Cargo.toml
crates/feishu-provider/src/: lib.rs  reply.rs  ws.rs
crates/router-runtime/: Cargo.toml
crates/router-runtime/src/: lib.rs
crates/session-store/: Cargo.toml
crates/session-store/src/: lib.rs
crates/session-store/tests/: session_test.rs
crates/vscode-bridge/: Cargo.toml
crates/vscode-bridge/src/: actions.rs  lib.rs
crates/vscode-bridge/tests/: actions_test.rs
