[workspace]
members = [
    "apps/desktop",
    "apps/doctor",
    "apps/mcp-server",
    "crates/core-contracts",
    "crates/feishu-provider",
    "crates/router-runtime",
    "crates/vscode-bridge",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
