[workspace]
members = [
    "apps/desktop",
    "apps/doctor",
    "apps/mcp-server",
    "crates/core-contracts",
    "crates/feishu-provider",
    "crates/router-runtime",
    "crates/session-store",
    "crates/vscode-bridge",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
prost = "0.13"
