[package]
name = "harborbeacon-desktop-app"
version.workspace = true
edition.workspace = true

[dependencies]
core-contracts = { path = "../../crates/core-contracts" }
feishu-provider = { path = "../../crates/feishu-provider" }
vscode-bridge = { path = "../../crates/vscode-bridge" }
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
