[package]
name = "harborbeacon-desktop-app"
version.workspace = true
edition.workspace = true

[dependencies]
core-contracts = { path = "../../crates/core-contracts" }
feishu-provider = { path = "../../crates/feishu-provider" }
session-store = { path = "../../crates/session-store" }
vscode-bridge = { path = "../../crates/vscode-bridge" }
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
candle-core = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle", package = "candle-nn" }
