[package]
name = "harborbeacon-desktop-doctor"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
serde_json.workspace = true
feishu-provider = { path = "../../crates/feishu-provider" }
candle-core = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle", package = "candle-nn" }
