[package]
name = "harborbeacon-desktop-mcp-server"
version.workspace = true
edition.workspace = true

[dependencies]
core-contracts = { path = "../../crates/core-contracts" }
vscode-bridge = { path = "../../crates/vscode-bridge" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
