[package]
name = "feishu-provider"
version.workspace = true
edition.workspace = true

[dependencies]
core-contracts = { path = "../core-contracts" }
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
url.workspace = true
